Event list: add word wrap for title. Fix #141

--- a/collectives/static/css/event/event.css
+++ b/collectives/static/css/event/event.css
@@ -18,6 +18,8 @@
     padding: 20px 20px;
     display: flex;
     flex-direction: row;
+    white-space: normal;
+    align-items: center;
 }
 #eventlist #eventstable .row:hover{
     text-decoration: none;
